Octicons moved to example

--- a/Example/EFIconFont/Info.plist
+++ b/Example/EFIconFont/Info.plist
@@ -35,5 +35,9 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 	</array>
+    <key>UIAppFonts</key>
+    <array>
+        <string>octicons.ttf</string>
+    </array>
 </dict>
 </plist>
