--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
-osx_image: xcode10
-env: SWIFT_SNAPSHOT=4.2
+osx_image: xcode10.2
+env: SWIFT_SNAPSHOT=5.0
 
 cache: cocoapods
 podfile: Example/Podfile
@@ -10,19 +10,20 @@ env:
     - LANG=en_US.UTF-8
     - LC_ALL=en_US.UTF-8
     - XCODE_WORKSPACE=Example/EFIconFont.xcworkspace
+    - DESTINATION="OS=12.0,name=iPhone XS"
   matrix:
     - SCHEME="EFIconFont-Example"
 
 before_install:
-  - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
-  - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
+  - gem install xcpretty --no-document --quiet
+  - gem install cocoapods --pre --no-document --quiet
   - pod install --project-directory=Example
 
 script:
   - set -o pipefail
   - pod repo update
-  - xcodebuild -workspace "$XCODE_WORKSPACE" -scheme "$SCHEME" -configuration Debug clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO | xcpretty -c
-  - xcodebuild -workspace "$XCODE_WORKSPACE" -scheme "$SCHEME" -configuration Release clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO | xcpretty -c
+  - xcodebuild -workspace "$XCODE_WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
+  - xcodebuild -workspace "$XCODE_WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
   - pod lib lint --allow-warnings
 
 after_success:
